Rutas y settings de colores de tema

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adminpro</title>
+    <title>WikyApp</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <link id="tema" id="theme" rel="stylesheet">
 
 
 </head>
